@@ -46,36 +46,36 @@ repositories {
 
 dependencies {
     // JavaFX11 explicit dependencies
-    compile "org.openjfx:javafx-base:11.0.1:$platform"
-    compile "org.openjfx:javafx-graphics:11.0.1:$platform"
-    compile "org.openjfx:javafx-controls:11.0.1:$platform"
-    compile "org.openjfx:javafx-fxml:11.0.1:$platform"
-    compile "org.openjfx:javafx-swing:11.0.1:$platform"
-    compile "org.openjfx:javafx-web:11.0.1:$platform"
-    compile "org.openjfx:javafx-media:11.0.1:$platform"
+    compile "org.openjfx:javafx-base:11.0.2:$platform"
+    compile "org.openjfx:javafx-graphics:11.0.2:$platform"
+    compile "org.openjfx:javafx-controls:11.0.2:$platform"
+    compile "org.openjfx:javafx-fxml:11.0.2:$platform"
+    compile "org.openjfx:javafx-swing:11.0.2:$platform"
+    compile "org.openjfx:javafx-web:11.0.2:$platform"
+    compile "org.openjfx:javafx-media:11.0.2:$platform"
     
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.12'
-    compile 'commons-cli:commons-cli:1.3.1'
-    compile 'commons-io:commons-io:2.4'
-    compile 'org.apache.commons:commons-lang3:3.8.1'
-    compile 'org.apache.commons:commons-collections4:4.2'
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
+    compile 'commons-cli:commons-cli:1.4'
+    compile 'commons-io:commons-io:2.6'
+    compile 'org.apache.commons:commons-lang3:3.9'
+    compile 'org.apache.commons:commons-collections4:4.4'
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.7'
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.7'
     compile 'gpx-parser:gpx-parser:1.2'
-    compile 'org.jzy3d:jzy3d-api:1.0.0'
-    compile 'org.jzy3d:jzy3d-javafx:1.0.0'
-    compile group: 'org.controlsfx', name: 'controlsfx', version: '9.0.0'
+    compile 'org.jzy3d:jzy3d-api:1.0.2'
+    compile 'org.jzy3d:jzy3d-javafx:1.0.2'
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
     compile 'de.jensd:fontawesomefx:8.9'
     compile 'de.saring:leafletmap:1.0.5-SNAPSHOT'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.5'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
-    compile group: 'org.jfxtras', name: 'jfxtras-controls', version: '8.0-r6'
-    compile group: 'org.jfxtras', name: 'jfxtras-labs', version: '8.0-r6'
-    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    compile 'uk.com.robust-it:cloning:1.9.10'
-    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.9'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.3'
+    compile group: 'org.jfxtras', name: 'jfxtras-controls', version: '10.0-r1'
+    compile group: 'org.jfxtras', name: 'jfxtras-labs', version: '9.0-r1'
+    compile 'uk.com.robust-it:cloning:1.9.12'
     
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.1'
 }
 
 compileJava {
@@ -98,6 +98,7 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
                 '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
                 '--add-exports', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
+                '--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.prism=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
@@ -114,6 +115,7 @@ run {
     doFirst {
         jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,])
         jvmArgs = jvmArgs.plus(newArgs)
+        jvmArgs '-Xss80M'
     }
 }
 
@@ -128,5 +130,20 @@ task(debug, dependsOn: 'classes', type: JavaExec) {
                 "-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005",
         ])
         jvmArgs = jvmArgs.plus(newArgs)
+    }
+}
+
+jar {
+    manifest {
+        attributes(
+            'Built-By'       : System.properties['user.name'],
+            'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
+            'Created-By'     : "Gradle ${gradle.gradleVersion}",
+            'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
+            'Build-OS'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}",
+            'App-Name'       : "GPXEditor",
+            'App-Version'    : "4.0",
+            'App-URL'        : "https://github.com/ThomasDaheim/GPXEditor"
+        )
     }
 }
